# conda-recipes

./: 0_core.yml  1_extra.yml  2_rcore.yml  3_torch.yml.in  4_bioconductor.yml  5_bioconda_core.yml  6_scverse.yml  9_pip.yml  Dockerfile.cpu  Dockerfile.cuda  README.org  benj.yml.in  configure  configure.ac  full.yml.in  install.R
.github/workflows/: autoreconf.yml
cellbender/: cellbender.yml
chrombpnet/: chrombpnet.yml.in
chungus/: 0_core.yml  1_extra.yml  2_rcore.yml  3_torch.yml.in  4_bioconductor.yml  5_bioconda_core.yml  6_scverse.yml  9_pip.yml  chungus.yml.in  install.R  install.jl
visiumhd/: visiumhd.yml.in
